hermes_fuzz_executed_few_shot/fuzz_2_execution
'use strict';

 

console.log(foo.a);
console.log(bar());
console.log(bar2);

async function* foo2({ 'a': 1 }){ yield 'bar'; };
foo[foo] = [];
foo.a = 5;
let genFunc = function*() {
  yield 'foo';
  let x = yield 'bar';
};
var set = new Set();
set[set] = true;

var obj = null;

console.log(obj[obj]);

var obj2 = [1,2,3];

var obj3 = { a: 'bar'};


Execution Output ------------------:
test.js:9:29: error: identifier, '{' or '[' expected in binding pattern
async function* foo2({ 'a': 1 }){ yield 'bar'; };
                            ^
